--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -7,6 +7,7 @@
     >
       <div
         x-bind="modalDialog"
+        x-trap="open"
         class="h-auto p-6 m-auto relative w-full max-w-md bg-white rounded-lg shadow-xl"
         role="dialog"
         aria-hidden="true"
