--- a/components/dropdown/demo.html
+++ b/components/dropdown/demo.html
@@ -19,20 +19,22 @@
   <ul
     x-bind="menu"
     x-trap="open"
+    @keydown.prevent.down="$focus.wrap().next()"
+    @keydown.prevent.up="$focus.wrap().previous()"
     class="absolute bg-white rounded-lg shadow-lg mt-3 py-3 w-max"
   >
     <li>
-      <a class="px-4 py-2 block hover:bg-neutral-100 whitespace-nowrap" href="#"
+      <a class="px-4 py-2 block outline-0 focus:bg-neutral-100 hover:bg-neutral-100 whitespace-nowrap" href="#"
         >Action</a
       >
     </li>
     <li>
-      <a class="px-4 py-2 block hover:bg-neutral-100 whitespace-nowrap" href="#"
+      <a class="px-4 py-2 block outline-0 focus:bg-neutral-100 hover:bg-neutral-100 whitespace-nowrap" href="#"
         >Another action</a
       >
     </li>
     <li>
-      <a class="px-4 py-2 block hover:bg-neutral-100 whitespace-nowrap" href="#"
+      <a class="px-4 py-2 block outline-0 focus:bg-neutral-100 hover:bg-neutral-100 whitespace-nowrap" href="#"
         >Something else here very long</a
       >
     </li>
