--- a/components/dropdown/variations/link/demo.html
+++ b/components/dropdown/variations/link/demo.html
@@ -1,5 +1,5 @@
 <div x-data="dropdown" data-position="bottom">
-	<a href="#" role="button" x-bind="trigger" class="bg-blue-400 text-white px-4 py-2 rounded-lg font-semibold hover:brightness-110 flex items-center whitespace-nowrap">
+	<a href="#" role="button" x-bind="trigger" class="underline hover:lightness-110 text-blue-500">
 		Dropup button
 	</a>
 	<ul x-bind="menu">
