Dropdown: Icon removed from component, added to examples, version update

--- a/components/dropdown/variations/dropup/demo.html
+++ b/components/dropdown/variations/dropup/demo.html
@@ -1,6 +1,7 @@
 <div x-data="dropdown" data-position="top">
 	<button x-bind="trigger" aria-expanded="false" class="bg-blue-400 text-white px-4 py-2 rounded-lg font-semibold hover:brightness-110 flex items-center whitespace-nowrap">
 		Dropup button
+		<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24" class="w-5 h-5 inline ml-1"><path xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 14l7-7 7 7"/></svg>
 	</button>
 	<ul x-bind="menu">
 		<li><a href="#">Action</a></li>
