--- a/components/dropdown/variations/link/html.html
+++ b/components/dropdown/variations/link/html.html
@@ -1,6 +1,7 @@
 <div x-data="dropdown" data-position="bottom">
 	<a x-bind="trigger" href="#" role="button" >
 		Dropup button
+		<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path  stroke-linecap="round" stroke-width="2" d="M5 10l7 7 7-7"/></svg>
 	</a>
 	<ul x-bind="menu">
 		<li><a href="#">Action</a></li>
