--- a/components/modal/variations/default/demo.html
+++ b/components/modal/variations/default/demo.html
@@ -6,19 +6,8 @@
     Show modal
   </button>
 
-  <div
-    x-bind="modalBackground"
-    class="fixed top-0 left-0 flex items-center justify-center w-screen h-screen max-w-full bg-neutral-500/50 z-50 overflow-y-auto p-3 lg:p-6"
-    style="display: none"
-  >
-    <div
-      x-bind="modalDialog"
-      x-trap="open"
-      class="h-auto p-6 m-auto relative w-full max-w-md bg-white rounded-lg shadow-xl"
-      role="dialog"
-      aria-hidden="true"
-      style="display: none"
-    >
+  <div x-bind="background">
+    <div x-bind="dialog" role="dialog" aria-hidden="true">
       <h3 class="text-lg font-bold">Modal title</h3>
       <div class="mt-6 gap-3 flex flex-wrap">
         <div class="flex gap-3 flex-wrap">
