--- a/components/modal/variations/default/html.html
+++ b/components/modal/variations/default/html.html
@@ -1,17 +1,8 @@
 <div x-data="modal">
-  <button class="btn" x-bind="modalTrigger">Show modal</button>
+  <button class="btn" x-bind="trigger">Show modal</button>
   <template x-teleport="body">
-    <div
-      x-bind="modalBackground"
-      class="fixed top-0 left-0 flex items-center justify-center w-screen h-screen max-w-full bg-neutral-500/50 z-50 overflow-y-auto p-3 lg:p-6"
-    >
-      <div
-        x-bind="modalDialog"
-        x-trap="open"
-        class="h-auto p-6 m-auto relative w-full max-w-md bg-white rounded-lg shadow-xl"
-        role="dialog"
-        aria-hidden="true"
-      >
+    <div x-bind="background">
+      <div x-bind="dialog" role="dialog" aria-hidden="true">
         <h3 class="text-lg font-bold">Modal title</h3>
         <div class="mt-6">Content</div>
       </div>
