modal: demo fix

--- a/components/modal/variations/default/demo.html
+++ b/components/modal/variations/default/demo.html
@@ -1,7 +1,7 @@
 <div x-data="modal">
   <button
     class="bg-blue-400 text-white px-4 py-2 rounded-lg font-semibold hover:brightness-110"
-    x-bind="modalTrigger"
+    x-bind="trigger"
   >
     Show modal
   </button>
