dropup example fix

--- a/components/dropdown/variations/dropup/html.html
+++ b/components/dropdown/variations/dropup/html.html
@@ -1,4 +1,4 @@
-<div x-data="dropdown" data-position="bottom">
+<div x-data="dropdown" data-position="top">
 	<button x-bind="trigger" aria-expanded="false">
 		Dropup button
 		<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24" class="w-5 h-5 inline ml-1"><path xmlns="http://www.w3.org/2000/svg" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 14l7-7 7 7"/></svg>
