--- a/components/modal/variations/default/demo.html
+++ b/components/modal/variations/default/demo.html
@@ -34,6 +34,10 @@
           </button>
         </div>
       </div>
+    </div>
+  </template>
+  <template x-teleport="body">
+    <div x-bind="background">  
       <div x-bind="dialog" role="dialog" aria-hidden="true" id="modal-2">
           <h3 class="text-lg font-bold">Modal 2 title</h3>
           <div class="mt-6 gap-3 flex flex-wrap">
