--- a/components/modal/variations/default/html.html
+++ b/components/modal/variations/default/html.html
@@ -7,6 +7,10 @@
         <h3 class="text-lg font-bold">Modal 1 title</h3>
         <div class="mt-6">Content</div>
       </div>
+    </div>
+  </template>
+  <template x-teleport="body">
+    <div x-bind="background">  
       <div x-bind="dialog" role="dialog" aria-hidden="true" id="modal-2">
         <h3 class="text-lg font-bold">Modal 2 title</h3>
         <div class="mt-6">Content</div>
