multiselect demo fix

--- a/components/multiselect/variations/default/html.html
+++ b/components/multiselect/variations/default/html.html
@@ -1,5 +1,5 @@
 <div x-data="multiselect">
-  <select multiple x-data="multiselect">
+  <select multiple>
     <optgroup label="Names">
       <option value="John">John</option>
       <option value="Peter">Peter</option>
